Added logic for checking out
